# logodle

./: .gitignore  requirements-dev.txt  setup.cfg
logodle/: _cli.py
